# sdl2-exp

./: CMakeLists.txt
src/: main.cpp
src/1_hello_world/: CMakeLists.txt  main.cpp
src/2_event_handling_system/: CMakeLists.txt  main.cpp
src/3_key_press/: CMakeLists.txt  main.cpp
src/4_surface_loading/: CMakeLists.txt  main.cpp
src/5_rendering/: CMakeLists.txt  main.cpp
